--- a/style.css
+++ b/style.css
@@ -1,15 +1,119 @@
 /* Add your styles here. Take it piece by piece! */
+h1, .bylines{
+  font-family: sans-serif;
+  font-size: 2.8rem;
+}
+
+.block h2{
+  font-family: sans-serif;
+  font-size: 2.8rem;
+}
+body{
+  font-family: "GT Sectra", serif;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+link{
+  font-family: SFMono-Regular,"Roboto Mono","Lucida Console",Monaco,Courier,monospace;
+}
+
+a{
+  text-decoration: none;
+}
+
+ul{
+  list-style: none;
+}
+
+html {
+  --bright: #D231A0;
+  --accent: #E3FFF7;
+  --body: #F3FFFC;
+  /* these are for dark mode - the dark mode accent and body colors */
+  --dma: #E3FFF7;
+  --dmb: #D231A0;
+}
+
+/*Designing the Header*/
+/* .masthead-categories */
+
+header{
+  display: grid;
+  height: 100%;
+  grid-column-gap: 2.5rem;
+  grid-template-columns: repeat(8,1fr);
+  grid-template-rows: repeat(2,-webkit-max-content);
+  grid-template-rows: repeat(2,max-content);
+  margin: 0;
+  padding-top: 2.5rem;
+}
+nav ul{
+  display: flex;
+  justify-content: space-between;
+}
+
+.bs{
+  /* position: relative; */
+  width: 100%;
+  display: grid;
+  grid-gap: 2.5rem;
+  grid-template-columns: repeat(8,1fr);
+  align-items: center;
+  padding-bottom: 2.5rem;
+  box-sizing: inherit;
+}
+.bs-hed{
+  font-size: 2rem;
+  font-kerning: normal;
+  margin-bottom: 1.5rem;
+  font-weight: 700;
+  line-height: 1.1;
+  box-sizing: inherit;
+  display: block;
+  --max-width: 1320px;
+}
+.bs-story{
+  grid-column: 1/3;
+}
+
+.image-container img{
+  width: 100%;
+  box-sizing: inherit;
+  height: auto;
+
+}
+
+.bs-img{
+  grid-column: 3/span 6;
+  grid-row: 1/span 1;
+  padding-top: 10px;
+}
+.masthead-branding{
+  grid-column: 1/span 2;
+  grid-row: 1/span 2;
+}
+
+.masthead-branding .masthead-branding-logo{
+  display: block;
+  text-align: left;
+  font-size: 1.54rem;
+  line-height: 1;
+  margin-top: 1.4rem;
+}
+
+.masthead-categories{
+  display: initial;
+  grid-column: 3/span 6;
+  grid-row: 2/span 1;
+  /* padding: 1.2rem 0; */
+  border-top: 1px solid var(--pumice,#cacaca);
+  border-bottom: 1px solid var(--pumice,#cacaca);
+}
 
 
 
-
-
-
-
-
-
-
-
+/* Designing the subheader */
 
 
 /* These styles are for the disclaimer -- leave them alone */
