--- a/story.css
+++ b/story.css
@@ -3,3 +3,11 @@ Hi boy friend
 
 How are you doing?
 I have a big fat cow for meal today
+Hi boy friend
+
+
+How are you doing?
+Hi boy friend
+
+
+How are you doing?
