--- a/story.css
+++ b/story.css
@@ -11,3 +11,21 @@ Hi boy friend
 
 
 How are you doing?
+
+How are you doing?
+Hi boy friend
+
+
+How are you doing?
+
+How are you doing?
+Hi boy friend
+
+
+How are you doing?
+
+How are you doing?
+Hi boy friend
+
+
+How are you doing?
