--- a/story.css
+++ b/story.css
@@ -1,31 +1,3 @@
 Hi boy friend
 
-
-How are you doing?
-I have a big fat cow for meal today
-Hi boy friend
-
-
-How are you doing?
-Hi boy friend
-
-
-How are you doing?
-
-How are you doing?
-Hi boy friend
-
-
-How are you doing?
-
-How are you doing?
-Hi boy friend
-
-
-How are you doing?
-
-How are you doing?
-Hi boy friend
-
-
-How are you doing?
+I need money
